@@ -32,6 +32,7 @@ import org.jruby.*;
 import org.jruby.anno.JRubyClass;
 import org.jruby.anno.JRubyMethod;
 import org.jruby.anno.JRubyModule;
+import org.jruby.api.Convert;
 import org.jruby.exceptions.NoMethodError;
 import org.jruby.internal.runtime.methods.JavaMethod;
 import org.jruby.java.proxies.ArrayJavaProxy;
@@ -55,6 +56,12 @@ import java.lang.reflect.Modifier;
 
 import static org.jruby.RubyEnumerator.enumeratorize;
 import static org.jruby.RubyModule.undefinedMethodMessage;
+import static org.jruby.api.Convert.asBoolean;
+import static org.jruby.api.Convert.asFixnum;
+import static org.jruby.api.Create.*;
+import static org.jruby.api.Error.argumentError;
+import static org.jruby.api.Error.nameError;
+import static org.jruby.api.Error.typeError;
 import static org.jruby.javasupport.JavaUtil.convertJavaToUsableRubyObject;
 import static org.jruby.javasupport.JavaUtil.isJavaObject;
 import static org.jruby.javasupport.JavaUtil.unwrapIfJavaObject;
@@ -70,34 +77,36 @@ import static org.jruby.util.RubyStringBuilder.ids;
  */
 public abstract class JavaLang {
 
-    public static void define(final Ruby runtime) {
-        JavaExtensions.put(runtime, java.lang.Iterable.class, (proxyClass) -> Iterable.define(runtime, proxyClass));
-        JavaExtensions.put(runtime, java.lang.Comparable.class, (proxyClass) -> Comparable.define(runtime, proxyClass));
-        JavaExtensions.put(runtime, java.lang.Throwable.class, (proxyClass) -> Throwable.define(runtime, (RubyClass) proxyClass));
-        JavaExtensions.put(runtime, java.lang.Runnable.class, (proxyClass) -> Runnable.define(runtime, proxyClass));
-        JavaExtensions.put(runtime, java.lang.Character.class, (proxyClass) -> Character.define(runtime, (RubyClass) proxyClass));
-        JavaExtensions.put(runtime, java.lang.Number.class, (proxyClass) -> Number.define(runtime, (RubyClass) proxyClass));
-        JavaExtensions.put(runtime, java.lang.Class.class, (proxyClass) -> Class.define(runtime, (RubyClass) proxyClass));
-        JavaExtensions.put(runtime, java.lang.ClassLoader.class, (proxyClass) -> ClassLoader.define(runtime, (RubyClass) proxyClass));
+    public static void define(ThreadContext context, RubyModule _Enumerable, RubyModule _Comparable) {
+        var runtime = context.runtime;
+
+        JavaExtensions.put(runtime, java.lang.Iterable.class,proxy -> Iterable.define(context, proxy, _Enumerable));
+        JavaExtensions.put(runtime, java.lang.Comparable.class,proxy -> Comparable.define(context, proxy, _Comparable));
+        JavaExtensions.put(runtime, java.lang.Throwable.class, proxy -> proxy.defineMethods(context, Throwable.class));
+        JavaExtensions.put(runtime, java.lang.Runnable.class,proxy -> proxy.defineMethods(context, Runnable.class));
+        JavaExtensions.put(runtime, java.lang.Character.class,proxy -> proxy.defineMethods(context, Character.class));
+        JavaExtensions.put(runtime, java.lang.Number.class,proxy -> proxy.defineMethods(context, Number.class));
+        JavaExtensions.put(runtime, java.lang.Class.class,proxy -> Class.define(context, proxy, _Comparable));
+        JavaExtensions.put(runtime, java.lang.ClassLoader.class, proxy -> proxy.defineMethods(context, ClassLoader.class));
         // Java::byte[].class_eval ...
         JavaExtensions.put(runtime, new byte[0].getClass(), (byteArray) -> {
-            byteArray.addMethod("ubyte_get", new UByteGet(byteArray));
-            byteArray.addMethod("ubyte_set", new UByteSet(byteArray));
+            byteArray.addMethod(context, "ubyte_get", new UByteGet(byteArray));
+            byteArray.addMethod(context, "ubyte_set", new UByteSet(byteArray));
         });
-        JavaExtensions.put(runtime, java.lang.CharSequence.class, (proxyClass) -> CharSequence.define(runtime, proxyClass));
-        JavaExtensions.put(runtime, java.lang.String.class, (proxyClass) -> String.define(runtime, (RubyClass) proxyClass));
-        JavaExtensions.put(runtime, java.lang.Enum.class, (proxyClass) -> proxyClass.defineAlias("inspect", "to_s"));
-        JavaExtensions.put(runtime, java.lang.Boolean.class, (proxyClass) -> proxyClass.defineAlias("inspect", "to_s"));
-        JavaExtensions.put(runtime, java.lang.Thread.class, (proxyClass) -> proxyClass.addMethod("inspect", new InspectThread(proxyClass)));
+        JavaExtensions.put(runtime, java.lang.CharSequence.class, proxy -> proxy.defineMethods(context, CharSequence.class));
+        JavaExtensions.put(runtime, java.lang.String.class, proxy -> proxy.defineMethods(context, String.class));
+        JavaExtensions.put(runtime, java.lang.Enum.class, proxy -> proxy.defineAlias(context, "inspect", "to_s"));
+        JavaExtensions.put(runtime, java.lang.Boolean.class, proxy -> proxy.defineAlias(context, "inspect", "to_s"));
+        JavaExtensions.put(runtime, java.lang.Thread.class, proxy -> proxy.addMethod(context, "inspect", new InspectThread(proxy)));
     }
 
     @JRubyModule(name = "Java::JavaLang::Iterable", include = "Enumerable")
     public static class Iterable {
 
-        static RubyModule define(final Ruby runtime, final RubyModule proxy) {
-            proxy.includeModule( runtime.getEnumerable() ); // include Enumerable
-            proxy.defineAnnotatedMethods(Iterable.class);
-            return proxy;
+        static RubyModule define(ThreadContext context, final RubyModule proxy, RubyModule Enumerable) {
+            return proxy.
+                    include(context, Enumerable).
+                    defineMethods(context, Iterable.class);
         }
 
         @JRubyMethod
@@ -117,22 +126,21 @@ public abstract class JavaLang {
 
         @JRubyMethod
         public static IRubyObject each_with_index(final ThreadContext context, final IRubyObject self, final Block block) {
-            final Ruby runtime = context.runtime;
-            if ( ! block.isGiven() ) { // ... Enumerator.new(self, :each_with_index)
-                return enumeratorize(context.runtime, self, "each_with_index");
-            }
-            java.lang.Iterable iterable = unwrapIfJavaObject(self);
-            java.util.Iterator iterator = iterable.iterator();
+            // ... Enumerator.new(self, :each_with_index)
+            if (!block.isGiven()) return enumeratorize(context.runtime, self, "each_with_index");
+
+            java.lang.Iterable<?> iterable = unwrapIfJavaObject(self);
+            java.util.Iterator<?> iterator = iterable.iterator();
             final boolean twoArguments = block.getSignature().isTwoArguments();
             int i = 0; while ( iterator.hasNext() ) {
-                final RubyInteger index = RubyFixnum.newFixnum(runtime, i++);
+                final RubyInteger index = asFixnum(context, i++);
                 final Object value = iterator.next();
-                final IRubyObject rValue = convertJavaToUsableRubyObject(runtime, value);
+                final IRubyObject rValue = convertJavaToUsableRubyObject(context.runtime, value);
 
                 if (twoArguments) {
                     block.yieldSpecific(context, rValue, index);
                 } else {
-                    block.yield(context, RubyArray.newArray(runtime, rValue, index));
+                    block.yield(context, newArray(context, rValue, index));
                 }
             }
             return self;
@@ -140,51 +148,46 @@ public abstract class JavaLang {
 
         @JRubyMethod(name = { "to_a", "entries" }) // @override Enumerable#to_a
         public static IRubyObject to_a(final ThreadContext context, final IRubyObject self, final Block block) {
-            final Ruby runtime = context.runtime;
-            final RubyArray ary = runtime.newArray();
-            java.lang.Iterable iterable = unwrapIfJavaObject(self);
-            java.util.Iterator iterator = iterable.iterator();
-            while ( iterator.hasNext() ) {
-                final Object value = iterator.next();
-                ary.append( convertJavaToUsableRubyObject(runtime, value) );
+            final var ary = newArray(context);
+            java.lang.Iterable<?> iterable = unwrapIfJavaObject(self);
+            for (Object o: iterable) {
+                ary.append(context, convertJavaToUsableRubyObject(context.runtime, o));
             }
             return ary;
         }
 
         @JRubyMethod(name = "count") // @override Enumerable#count
         public static IRubyObject count(final ThreadContext context, final IRubyObject self, final Block block) {
-            final Ruby runtime = context.runtime;
             java.lang.Iterable iterable = unwrapIfJavaObject(self);
-            if ( block.isGiven() ) {
-                return countBlock(context, iterable.iterator(), block);
-            }
+            if (block.isGiven()) return countBlock(context, iterable.iterator(), block);
+
             if ( iterable instanceof java.util.Collection ) {
-                return RubyFixnum.newFixnum(runtime, ((java.util.Collection) iterable).size());
+                return asFixnum(context, ((java.util.Collection) iterable).size());
             }
             int count = 0;
             for( java.util.Iterator it = iterable.iterator(); it.hasNext(); ) { it.next(); count++; }
-            return RubyFixnum.newFixnum(runtime, count);
+            return asFixnum(context, count);
         }
 
         static RubyFixnum countBlock(final ThreadContext context, final java.util.Iterator it, final Block block) {
-            final Ruby runtime = context.runtime;
-            int count = 0; while ( it.hasNext() ) {
-                IRubyObject next = convertJavaToUsableRubyObject( runtime, it.next() );
+            int count = 0;
+            while ( it.hasNext() ) {
+                IRubyObject next = convertJavaToUsableRubyObject(context.runtime, it.next());
                 if ( block.yield( context, next ).isTrue() ) count++;
             }
-            return RubyFixnum.newFixnum(runtime, count);
+            return asFixnum(context, count);
         }
 
         @JRubyMethod(name = "count") // @override Enumerable#count
         public static IRubyObject count(final ThreadContext context, final IRubyObject self, final IRubyObject obj, final Block unused) {
             // unused block due DescriptorInfo not (yet) supporting if a method receives block and an override doesn't
-            final Ruby runtime = context.runtime;
             java.lang.Iterable iterable = unwrapIfJavaObject(self);
-            int count = 0; for ( java.util.Iterator it = iterable.iterator(); it.hasNext(); ) {
-                IRubyObject next = convertJavaToUsableRubyObject( runtime, it.next() );
+            int count = 0;
+            for ( java.util.Iterator it = iterable.iterator(); it.hasNext(); ) {
+                IRubyObject next = convertJavaToUsableRubyObject(context.runtime, it.next() );
                 if ( RubyObject.equalInternal(context, next, obj) ) count++;
             }
-            return RubyFixnum.newFixnum(runtime, count);
+            return asFixnum(context, count);
         }
 
     }
@@ -192,39 +195,30 @@ public abstract class JavaLang {
     @JRubyClass(name = "Java::JavaLang::Comparable", include = "Comparable")
     public static class Comparable {
 
-        static RubyModule define(final Ruby runtime, final RubyModule proxy) {
-            proxy.includeModule( runtime.getComparable() ); // include Comparable
-            proxy.defineAnnotatedMethods(Comparable.class);
-            return proxy;
+        static RubyModule define(ThreadContext context, final RubyModule proxy, RubyModule Comparable) {
+            return proxy.
+                    include(context, Comparable).
+                    defineMethods(context, Comparable.class);
         }
 
         @JRubyMethod(name = "<=>")
         public static IRubyObject cmp(final ThreadContext context, final IRubyObject self, final IRubyObject other) {
-            java.lang.Comparable comparable = unwrapIfJavaObject(self);
-            if ( other.isNil() ) return context.nil;
+            if (other.isNil()) return context.nil;
 
+            java.lang.Comparable comparable = unwrapIfJavaObject(self);
             final java.lang.Object otherComp = unwrapIfJavaObject(other);
 
-            final int cmp;
             try {
-                cmp = comparable.compareTo(otherComp);
+                return asFixnum(context, comparable.compareTo(otherComp));
+            } catch (ClassCastException ex) {
+                throw typeError(context, ex.getMessage());
             }
-            catch (ClassCastException ex) {
-                throw context.runtime.newTypeError(ex.getMessage());
-            }
-            return RubyFixnum.newFixnum(context.runtime, cmp);
         }
 
     }
 
     @JRubyClass(name = "Java::JavaLang::Throwable")
     public static class Throwable {
-
-        static RubyModule define(final Ruby runtime, final RubyClass proxy) {
-            proxy.defineAnnotatedMethods(Throwable.class);
-            return proxy;
-        }
-
         @JRubyMethod // stackTrace => backtrace
         public static IRubyObject backtrace(final ThreadContext context, final IRubyObject self) {
             final Ruby runtime = context.runtime;
@@ -236,21 +230,26 @@ public abstract class JavaLang {
             if ( len == 0 ) return RubyArray.newEmptyArray(runtime);
             IRubyObject[] backtrace = new IRubyObject[len];
             for ( int i=0; i < len; i++ ) {
-                backtrace[i] = RubyString.newString(runtime, stackTrace[i].toString());
+                backtrace[i] = newString(context, stackTrace[i].toString());
             }
             return RubyArray.newArrayMayCopy(runtime, backtrace);
         }
 
-        @JRubyMethod // can not set backtrace for a java.lang.Throwable
+        @Deprecated(since = "10.0.0.0")
         public static IRubyObject set_backtrace(final IRubyObject self, final IRubyObject backtrace) {
-            return self.getRuntime().getNil();
+            return set_backtrace(((RubyBasicObject) self).getCurrentContext(), self, backtrace);
+        }
+
+        @JRubyMethod // can not set backtrace for a java.lang.Throwable
+        public static IRubyObject set_backtrace(ThreadContext context, final IRubyObject self, final IRubyObject backtrace) {
+            return context.nil;
         }
 
         @JRubyMethod
         public static IRubyObject message(final ThreadContext context, final IRubyObject self) {
             java.lang.Throwable throwable = unwrapIfJavaObject(self);
             final java.lang.String msg = throwable.getLocalizedMessage(); // does getMessage
-            return msg == null ? RubyString.newEmptyString(context.runtime) : RubyString.newString(context.runtime, msg);
+            return msg == null ? newEmptyString(context) : newString(context, msg);
         }
 
         @JRubyMethod
@@ -260,7 +259,26 @@ public abstract class JavaLang {
 
         @JRubyMethod
         public static IRubyObject full_message(final ThreadContext context, final IRubyObject self, final IRubyObject opts) {
-            return RubyString.newString(context.runtime, TraceType.printFullMessage(context, self, opts));
+            return TraceType.printFullMessage(context, self, opts);
+        }
+
+        @JRubyMethod
+        public static IRubyObject detailed_message(final ThreadContext context, final IRubyObject self) {
+            return detailed_message(context, self, (IRubyObject) null);
+        }
+
+        @JRubyMethod
+        public static IRubyObject detailed_message(final ThreadContext context, final IRubyObject self, final IRubyObject opts) {
+            return TraceType.printDetailedMessage(context, self, opts);
+        }
+
+        @JRubyMethod(optional = 1)
+        public static IRubyObject detailed_message(final ThreadContext context, final IRubyObject self, final IRubyObject[] args) {
+            return switch (args.length) {
+                case 0 -> detailed_message(context, self);
+                case 1 -> detailed_message(context, self, args[0]);
+                default -> throw argumentError(context, args.length, 0, 1);
+            };
         }
 
         @JRubyMethod // Ruby exception to_s is the same as message
@@ -304,12 +322,6 @@ public abstract class JavaLang {
 
     @JRubyModule(name = "Java::JavaLang::Runnable")
     public static class Runnable {
-
-        static RubyModule define(final Ruby runtime, final RubyModule proxy) {
-            proxy.defineAnnotatedMethods(Runnable.class);
-            return proxy;
-        }
-
         @JRubyMethod
         public static IRubyObject to_proc(final ThreadContext context, final IRubyObject self) {
             final Ruby runtime = context.runtime;
@@ -352,47 +364,39 @@ public abstract class JavaLang {
 
     @JRubyClass(name = "Java::JavaLang::Number")
     public static class Number {
-
-        static RubyClass define(final Ruby runtime, final RubyClass proxy) {
-            proxy.defineAnnotatedMethods(Number.class);
-            return proxy;
-        }
-
         @JRubyMethod(name = "to_f")
         public static IRubyObject to_f(final ThreadContext context, final IRubyObject self) {
-            java.lang.Number val = (java.lang.Number) self.toJava(java.lang.Number.class);
+            java.lang.Number val = self.toJava(java.lang.Number.class);
             return context.runtime.newFloat(val.doubleValue());
         }
 
         @JRubyMethod(name = "real?")
         public static IRubyObject real_p(final ThreadContext context, final IRubyObject self) {
-            java.lang.Number val = (java.lang.Number) self.toJava(java.lang.Number.class);
-            return RubyBoolean.newBoolean(context, val instanceof Integer || val instanceof Long ||
-                                                    val instanceof Short || val instanceof Byte ||
-                                                    val instanceof Float || val instanceof Double ||
-                                                    val instanceof java.math.BigInteger || val instanceof java.math.BigDecimal);
+            java.lang.Number val = self.toJava(java.lang.Number.class);
+            return asBoolean(context, val instanceof Integer || val instanceof Long || val instanceof Short ||
+                    val instanceof Byte || val instanceof Float || val instanceof Double ||
+                    val instanceof java.math.BigInteger || val instanceof java.math.BigDecimal);
         }
 
         @JRubyMethod(name = { "to_i", "to_int" })
         public static IRubyObject to_i(final ThreadContext context, final IRubyObject self) {
-            java.lang.Number val = (java.lang.Number) self.toJava(java.lang.Number.class);
-            if (val instanceof java.math.BigInteger) { // NOTE: should be moved into its own?
-                return RubyBignum.newBignum(context.runtime, (java.math.BigInteger) val);
+            java.lang.Number val = self.toJava(java.lang.Number.class);
+            if (val instanceof java.math.BigInteger bigint) { // NOTE: should be moved into its own?
+                return RubyBignum.newBignum(context.runtime, bigint);
             }
-            return context.runtime.newFixnum(val.longValue());
+            return asFixnum(context, val.longValue());
         }
 
         @JRubyMethod(name = "integer?")
         public static IRubyObject integer_p(final ThreadContext context, final IRubyObject self) {
-            java.lang.Number val = (java.lang.Number) self.toJava(java.lang.Number.class);
-            return RubyBoolean.newBoolean(context, val instanceof Integer || val instanceof Long ||
-                                                    val instanceof Short || val instanceof Byte ||
-                                                    val instanceof java.math.BigInteger);
+            java.lang.Number val = self.toJava(java.lang.Number.class);
+            return asBoolean(context, val instanceof Integer || val instanceof Long ||
+                    val instanceof Short || val instanceof Byte || val instanceof java.math.BigInteger);
         }
 
         @JRubyMethod(name = "zero?")
         public static IRubyObject zero_p(final ThreadContext context, final IRubyObject self) {
-            return RubyBoolean.newBoolean(context, isZero(self));
+            return asBoolean(context, isZero(self));
         }
 
         private static boolean isZero(final IRubyObject self) {
@@ -407,40 +411,33 @@ public abstract class JavaLang {
 
         @JRubyMethod(name = "coerce")
         public static IRubyObject coerce(final ThreadContext context, final IRubyObject self, final IRubyObject type) {
-            java.lang.Number val = (java.lang.Number) self.toJava(java.lang.Number.class);
+            java.lang.Number val = self.toJava(java.lang.Number.class);
 
             // NOTE: a basic stub that always coverts Java numbers to Ruby ones (for simplicity)
             // gist being this is not expected to be used heavily, if so should get special care
-            final IRubyObject value = convertJavaToUsableRubyObject(context.runtime, val);
-            return context.runtime.newArray(type, value);
+            return newArray(context, type, convertJavaToUsableRubyObject(context.runtime, val));
         }
 
         @JRubyMethod(name = "inspect")
         public static IRubyObject inspect(final ThreadContext context, final IRubyObject self) {
-            java.lang.Number val = (java.lang.Number) self.toJava(java.lang.Number.class);
-            return context.runtime.newString(val.toString());
+            java.lang.Number val = self.toJava(java.lang.Number.class);
+            return newString(context, val.toString());
         }
 
     }
 
     @JRubyClass(name = "Java::JavaLang::Character")
     public static class Character {
-
-        static RubyClass define(final Ruby runtime, final RubyClass proxy) {
-            proxy.defineAnnotatedMethods(Character.class);
-            return proxy;
-        }
-
         @JRubyMethod(name = "java_identifier_start?", meta = true)
         public static IRubyObject java_identifier_start_p(final ThreadContext context, final IRubyObject self,
                                                           final IRubyObject num) {
-            return RubyBoolean.newBoolean(context,  java.lang.Character.isJavaIdentifierStart(int_char(num)) );
+            return asBoolean(context, java.lang.Character.isJavaIdentifierStart(int_char(num)));
         }
 
         @JRubyMethod(name = "java_identifier_part?", meta = true)
         public static IRubyObject java_identifier_part_p(final ThreadContext context, final IRubyObject self,
                                                          final IRubyObject num) {
-            return RubyBoolean.newBoolean(context,  java.lang.Character.isJavaIdentifierPart(int_char(num)) );
+            return asBoolean(context, java.lang.Character.isJavaIdentifierPart(int_char(num)));
         }
 
         private static int int_char(IRubyObject num) { // str.ord -> Fixnum
@@ -449,13 +446,13 @@ public abstract class JavaLang {
 
         @JRubyMethod(name = "to_i")
         public static IRubyObject to_i(final ThreadContext context, final IRubyObject self) {
-            java.lang.Character c = (java.lang.Character) self.toJava(java.lang.Character.class);
-            return context.runtime.newFixnum(c);
+            java.lang.Character c = self.toJava(java.lang.Character.class);
+            return asFixnum(context, c);
         }
 
         @JRubyMethod(name = "inspect")
         public static IRubyObject inspect(final ThreadContext context, final IRubyObject self) {
-            java.lang.Character c = (java.lang.Character) self.toJava(java.lang.Character.class);
+            java.lang.Character c = self.toJava(java.lang.Character.class);
             return RubyString.newString(context.runtime, inspectCharValue(new java.lang.StringBuilder(3), c));
         }
 
@@ -468,21 +465,18 @@ public abstract class JavaLang {
     @JRubyClass(name = "Java::JavaLang::Class")
     public static class Class {
 
-        static RubyClass define(final Ruby runtime, final RubyClass proxy) {
-            proxy.includeModule( runtime.getComparable() ); // include Comparable
-            proxy.defineAnnotatedMethods(Class.class);
-            // JavaClass facade (compatibility) :
-            proxy.defineAlias("resource", "get_resource");
-            proxy.defineAlias("declared_field", "get_declared_field");
-            proxy.defineAlias("field", "get_field");
-
-            return proxy;
+        static RubyClass define(ThreadContext context, final RubyModule proxy, RubyModule Comparable) {
+            return proxy.include(context, Comparable).
+                    defineMethods(context, Class.class).
+                    defineAlias(context, "resource", "get_resource").
+                    defineAlias(context, "declared_field", "get_declared_field").
+                    defineAlias(context, "field", "get_field");
         }
 
         @JRubyMethod(name = "ruby_class")
         public static IRubyObject proxy_class(final ThreadContext context, final IRubyObject self) {
             final java.lang.Class klass = unwrapJavaObject(self);
-            return Java.getProxyClass(context.runtime, klass);
+            return Java.getProxyClass(context, klass);
         }
 
         @JRubyMethod
@@ -501,7 +495,7 @@ public abstract class JavaLang {
 
         @JRubyMethod // make to_s an improved class.name version
         public static IRubyObject to_s(final ThreadContext context, final IRubyObject self) {
-            return RubyString.newString(context.runtime, getClassName(self));
+            return newString(context, getClassName(self));
         }
 
         @JRubyMethod
@@ -523,116 +517,169 @@ public abstract class JavaLang {
         @JRubyMethod(name = "annotations?")
         public static IRubyObject annotations_p(final ThreadContext context, final IRubyObject self) {
             final java.lang.Class klass = unwrapJavaObject(self);
-            return RubyBoolean.newBoolean(context, klass.getAnnotations().length > 0);
+            return asBoolean(context, klass.getAnnotations().length > 0);
         }
 
         @JRubyMethod(name = "declared_annotations?")
         public static IRubyObject declared_annotations_p(final ThreadContext context, final IRubyObject self) {
             final java.lang.Class klass = unwrapJavaObject(self);
-            return RubyBoolean.newBoolean(context, klass.getDeclaredAnnotations().length > 0);
+            return asBoolean(context, klass.getDeclaredAnnotations().length > 0);
         }
 
         @JRubyMethod
         public static IRubyObject java_instance_methods(final ThreadContext context, final IRubyObject self) {
-            final java.lang.Class klass = unwrapJavaObject(self);
-            final RubyArray methods = RubyArray.newArray(context.runtime);
-            for ( java.lang.reflect.Method method : klass.getMethods() ) {
-                if ( ! Modifier.isStatic(method.getModifiers()) ) methods.add(method);
+            final java.lang.Class<?> klass = unwrapJavaObject(self);
+            Method[] publicMethods = klass.getMethods();
+
+            // quick count for accurate size
+            int size = 0;
+            for (java.lang.reflect.Method method : publicMethods) if (!Modifier.isStatic(method.getModifiers())) size++;
+            final var methods = allocArray(context, size);
+
+            for (java.lang.reflect.Method method : publicMethods) {
+                if (!Modifier.isStatic(method.getModifiers())) methods.add(context, method);
             }
             return methods;
         }
 
         @JRubyMethod
         public static IRubyObject declared_instance_methods(final ThreadContext context, final IRubyObject self) {
-            final java.lang.Class klass = unwrapJavaObject(self);
-            final RubyArray methods = RubyArray.newArray(context.runtime);
-            for ( java.lang.reflect.Method method : klass.getDeclaredMethods() ) {
-                if ( ! Modifier.isStatic(method.getModifiers()) ) methods.add(method);
+            final java.lang.Class<?> klass = unwrapJavaObject(self);
+            Method[] declaredMethods = klass.getDeclaredMethods();
+
+            // quick count for accurate size
+            int size = 0;
+            for (java.lang.reflect.Method method : declaredMethods) if (!Modifier.isStatic(method.getModifiers())) size++;
+            final var methods = allocArray(context, size);
+
+            for (java.lang.reflect.Method method : declaredMethods) {
+                if (!Modifier.isStatic(method.getModifiers())) methods.add(context, method);
             }
             return methods;
         }
 
         @JRubyMethod
         public static IRubyObject java_class_methods(final ThreadContext context, final IRubyObject self) {
-            final java.lang.Class klass = unwrapJavaObject(self);
-            final RubyArray methods = RubyArray.newArray(context.runtime);
-            for ( java.lang.reflect.Method method : klass.getMethods() ) {
-                if ( Modifier.isStatic(method.getModifiers()) ) methods.add(method);
+            final java.lang.Class<?> klass = unwrapJavaObject(self);
+            Method[] publicMethods = klass.getMethods();
+
+            // quick count for accurate size
+            int size = 0;
+            for (java.lang.reflect.Method method : publicMethods) if (Modifier.isStatic(method.getModifiers())) size++;
+            final var methods = allocArray(context, size);
+
+            for ( java.lang.reflect.Method method : publicMethods) {
+                if (Modifier.isStatic(method.getModifiers())) methods.add(method);
             }
             return methods;
         }
 
         @JRubyMethod
         public static IRubyObject declared_class_methods(final ThreadContext context, final IRubyObject self) {
-            final java.lang.Class klass = unwrapJavaObject(self);
-            final RubyArray methods = RubyArray.newArray(context.runtime);
-            for ( java.lang.reflect.Method method : klass.getDeclaredMethods() ) {
-                if ( Modifier.isStatic(method.getModifiers()) ) methods.add(method);
+            final java.lang.Class<?> klass = unwrapJavaObject(self);
+            Method[] declaredMethods = klass.getDeclaredMethods();
+
+            // quick count for accurate size
+            int size = 0;
+            for (java.lang.reflect.Method method : declaredMethods) if (Modifier.isStatic(method.getModifiers())) size++;
+            final var methods = allocArray(context, size);
+
+            for (java.lang.reflect.Method method : declaredMethods) {
+                if (Modifier.isStatic(method.getModifiers())) methods.add(method);
             }
             return methods;
         }
 
         @JRubyMethod(name = "<=>") // Ruby Comparable
         public static IRubyObject cmp(final ThreadContext context, final IRubyObject self, final IRubyObject other) {
-            final java.lang.Class that;
-            if ( isJavaObject(other) ) {
-                that = unwrapJavaObject(other);
-            }
-            else {
-                return context.nil;
-            }
-
+            if (!isJavaObject(other)) return context.nil;
+            final java.lang.Class that = unwrapJavaObject(other);
             final java.lang.Class thiz = unwrapJavaObject(self);
 
-            if ( thiz == that ) return context.runtime.newFixnum(0);
-            if ( thiz.isAssignableFrom(that) ) return context.runtime.newFixnum(+1);
-            if ( that.isAssignableFrom(thiz) ) return context.runtime.newFixnum(-1);
+            if (thiz == that) return asFixnum(context, 0);
+            if (thiz.isAssignableFrom(that)) asFixnum(context, +1);
+            if (that.isAssignableFrom(thiz)) asFixnum(context, -1);
 
             return context.nil;
         }
 
         @JRubyMethod(name = "anonymous?")
-        public static IRubyObject anonymous_p(final IRubyObject self) {
+        public static IRubyObject anonymous_p(ThreadContext context, final IRubyObject self) {
             final java.lang.Class klass = unwrapJavaObject(self);
-            return self.getRuntime().newBoolean( klass.isAnonymousClass() );
+            return asBoolean(context, klass.isAnonymousClass());
+        }
+
+        @Deprecated(since = "10.0.0.0")
+        public static IRubyObject anonymous_p(final IRubyObject self) {
+            return anonymous_p(((RubyBasicObject) self).getCurrentContext(), self);
         }
 
         @JRubyMethod(name = "abstract?")
-        public static IRubyObject abstract_p(final IRubyObject self) {
+        public static IRubyObject abstract_p(ThreadContext context, final IRubyObject self) {
             final java.lang.Class klass = unwrapJavaObject(self);
-            return JavaLangReflect.isAbstract( self, klass.getModifiers() );
+            return JavaLangReflect.isAbstract(context, self, klass.getModifiers());
+        }
+
+        @Deprecated(since = "10.0.0.0")
+        public static IRubyObject abstract_p(final IRubyObject self) {
+            return abstract_p(((RubyBasicObject) self).getCurrentContext(), self);
         }
 
         // JavaUtilities::ModifiedShortcuts :
 
         @JRubyMethod(name = "public?")
-        public static IRubyObject public_p(final IRubyObject self) {
+        public static IRubyObject public_p(ThreadContext context, final IRubyObject self) {
             final java.lang.Class klass = unwrapJavaObject(self);
-            return JavaLangReflect.isPublic( self, klass.getModifiers() );
+            return JavaLangReflect.isPublic(context, self, klass.getModifiers());
+        }
+
+        @Deprecated(since = "10.0.0.0")
+        public static IRubyObject public_p(final IRubyObject self) {
+            return public_p(((RubyBasicObject) self).getCurrentContext(), self);
         }
 
         @JRubyMethod(name = "protected?")
-        public static IRubyObject protected_p(final IRubyObject self) {
+        public static IRubyObject protected_p(ThreadContext context, final IRubyObject self) {
             final java.lang.Class klass = unwrapJavaObject(self);
-            return JavaLangReflect.isProtected(self, klass.getModifiers());
+            return JavaLangReflect.isProtected(context, self, klass.getModifiers());
+        }
+
+        @Deprecated(since = "10.0.0.0")
+        public static IRubyObject protected_p(final IRubyObject self) {
+            return protected_p(((RubyBasicObject) self).getCurrentContext(), self);
         }
 
         @JRubyMethod(name = "private?")
-        public static IRubyObject private_p(final IRubyObject self) {
+        public static IRubyObject private_p(ThreadContext context, final IRubyObject self) {
             final java.lang.Class klass = unwrapJavaObject(self);
-            return JavaLangReflect.isPrivate(self, klass.getModifiers());
+            return JavaLangReflect.isPrivate(context, self, klass.getModifiers());
+        }
+
+        @Deprecated(since = "10.0.0.0")
+        public static IRubyObject private_p(final IRubyObject self) {
+            return private_p(((RubyBasicObject) self).getCurrentContext(), self);
         }
 
         @JRubyMethod(name = "final?")
-        public static IRubyObject final_p(final IRubyObject self) {
+        public static IRubyObject final_p(ThreadContext context, final IRubyObject self) {
             final java.lang.Class klass = unwrapJavaObject(self);
-            return JavaLangReflect.isFinal(self, klass.getModifiers());
+            return JavaLangReflect.isFinal(context, self, klass.getModifiers());
+        }
+
+        @Deprecated(since = "10.0.0.0")
+        public static IRubyObject final_p(final IRubyObject self) {
+            return final_p(((RubyBasicObject) self).getCurrentContext(), self);
         }
 
         @JRubyMethod(name = "static?")
-        public static IRubyObject static_p(final IRubyObject self) {
+        public static IRubyObject static_p(ThreadContext context, final IRubyObject self) {
             final java.lang.Class klass = unwrapJavaObject(self);
-            return JavaLangReflect.isStatic(self, klass.getModifiers());
+            return JavaLangReflect.isStatic(context, self, klass.getModifiers());
+        }
+
+        @Deprecated(since = "10.0.0.0")
+        public static IRubyObject static_p(final IRubyObject self) {
+            return static_p(((RubyBasicObject) self).getCurrentContext(), self);
         }
 
         // JavaClass facade (compatibility) :
@@ -640,11 +687,11 @@ public abstract class JavaLang {
         @JRubyMethod
         public static IRubyObject extend_proxy(final ThreadContext context, IRubyObject self, IRubyObject extender) {
             java.lang.Class<?> klass = Java.unwrapClassProxy(self);
-            RubyModule proxy = Java.getProxyClass(context.runtime, klass);
+            RubyModule proxy = Java.getProxyClass(context, klass);
             try {
                 return extender.callMethod(context, "extend_proxy", proxy);
             } catch (NoMethodError ex) {
-                throw context.runtime.newTypeError("proxy extender must have an extend_proxy method");
+                throw typeError(context, "proxy extender must have an extend_proxy method");
             }
         }
 
@@ -668,7 +715,7 @@ public abstract class JavaLang {
                 return Java.getInstance(context.runtime, method); // a JavaMethod like
             } catch (NoSuchMethodException e) {
                 final Ruby runtime = context.runtime;
-                throw runtime.newNameError(undefinedMethodMessage(runtime, ids(runtime, methodName), ids(runtime, klass.getName()), false), methodName);
+                throw nameError(context, undefinedMethodMessage(runtime, ids(runtime, methodName), ids(runtime, klass.getName()), false), methodName);
             }
         }
 
@@ -695,19 +742,16 @@ public abstract class JavaLang {
             Arity.checkArgumentCount(context, args, 1, -1);
 
             final java.lang.Class klass = unwrapJavaObject(self);
-
             final java.lang.String methodName = args[0].asJavaString();
-
             java.lang.Class<?>[] argumentTypes = ClassUtils.getArgumentTypes(context, args, 1);
-
             AccessibleObject callable = ClassUtils.getMatchingCallable(klass, methodName, argumentTypes);
 
-            if ( callable != null ) {
-                return Java.getInstance(context.runtime, callable); // a JavaMethod or JavaConstructor like
+            if (callable == null) {
+                final Ruby runtime = context.runtime;
+                throw nameError(context, undefinedMethodMessage(runtime, ids(runtime, methodName), ids(runtime, klass.getName()), false), methodName);
             }
 
-            final Ruby runtime = context.runtime;
-            throw runtime.newNameError(undefinedMethodMessage(runtime, ids(runtime, methodName), ids(runtime, klass.getName()), false), methodName);
+            return Java.getInstance(context.runtime, callable); // a JavaMethod or JavaConstructor like
         }
 
         @SuppressWarnings("deprecation")
@@ -749,40 +793,28 @@ public abstract class JavaLang {
         public static IRubyObject new_array(ThreadContext context, IRubyObject self, IRubyObject length) {
             final java.lang.Class klass = unwrapJavaObject(self);
 
-            if (length instanceof RubyInteger) { // one-dimensional array
-                int len = ((RubyInteger) length).getIntValue();
-                return ArrayJavaProxy.newArray(context.runtime, klass, len);
+            if (length instanceof RubyInteger lenint) { // one-dimensional array
+                return ArrayJavaProxy.newArray(context, klass, lenint.asInt(context));
             }
-            if (length instanceof RubyArray) { // n-dimensional array
-                IRubyObject[] aryLengths = ((RubyArray) length).toJavaArrayMaybeUnsafe();
+            if (length instanceof RubyArray ary) { // n-dimensional array
+                IRubyObject[] aryLengths = ary.toJavaArrayMaybeUnsafe();
                 final int len = aryLengths.length;
-                if (len == 0) {
-                    throw context.runtime.newArgumentError("empty dimensions specifier for java array");
-                }
+                if (len == 0) throw argumentError(context, "empty dimensions specifier for java array");
+
                 final int[] dimensions = new int[len];
                 for (int i = len; --i >= 0; ) {
-                    IRubyObject dimLength = aryLengths[i];
-                    if (!( dimLength instanceof RubyInteger)) {
-                        throw context.runtime.newTypeError(dimLength, context.runtime.getInteger());
-                    }
-                    dimensions[i] = ((RubyInteger) dimLength).getIntValue();
+                    dimensions[i] = Convert.castAsInteger(context, aryLengths[i]).asInt(context);
                 }
-                return ArrayJavaProxy.newArray(context.runtime, klass, dimensions);
+                return ArrayJavaProxy.newArray(context, klass, dimensions);
             }
 
-            throw context.runtime.newArgumentError("invalid length or dimensions specifier for java array - must be Integer or Array of Integer");
+            throw argumentError(context, "invalid length or dimensions specifier for java array - must be Integer or Array of Integer");
         }
 
     }
 
     @JRubyClass(name = "Java::JavaLang::ClassLoader")
     public static class ClassLoader {
-
-        static RubyModule define(final Ruby runtime, final RubyClass proxy) {
-            proxy.defineAnnotatedMethods(ClassLoader.class);
-            return proxy;
-        }
-
         @JRubyMethod
         public static IRubyObject resource_as_url(final ThreadContext context, final IRubyObject self, final IRubyObject name) {
             final java.lang.ClassLoader loader = unwrapIfJavaObject(self);
@@ -808,12 +840,6 @@ public abstract class JavaLang {
 
     @JRubyClass(name = "Java::JavaLang::CharSequence")
     public static class CharSequence {
-
-        static RubyModule define(final Ruby runtime, final RubyModule proxy) {
-            proxy.defineAnnotatedMethods(CharSequence.class);
-            return proxy;
-        }
-
         @JRubyMethod(name = "inspect")
         public static IRubyObject inspect(final ThreadContext context, final IRubyObject self) {
             // we re-define java.lang.String#inspect thus this is for StringBuilder etc.
@@ -821,7 +847,7 @@ public abstract class JavaLang {
 
             RubyString buf = inspectPrefix(context, self.getMetaClass());
             RubyStringBuilder.cat(context.runtime, buf, SPACE);
-            buf.catWithCodeRange(RubyString.newString(context.runtime, str).inspect());
+            buf.catWithCodeRange((RubyString) RubyString.newString(context.runtime, str).inspect(context));
             RubyStringBuilder.cat(context.runtime, buf, GT); // >
 
             return buf;
@@ -831,22 +857,14 @@ public abstract class JavaLang {
 
     @JRubyClass(name = "Java::JavaLang::String")
     public static class String {
-
-        static RubyClass define(final Ruby runtime, final RubyClass proxy) {
-            proxy.defineAnnotatedMethods(String.class);
-            return proxy;
-        }
-
         @JRubyMethod(name = "to_s", alias = "to_str")
         public static IRubyObject to_s(final ThreadContext context, final IRubyObject self) {
-            java.lang.String str = (java.lang.String) self.toJava(java.lang.String.class);
-            return RubyString.newString(context.runtime, str);
+            return newString(context, self.toJava(java.lang.String.class));
         }
 
         @JRubyMethod(name = "inspect")
         public static IRubyObject inspect(final ThreadContext context, final IRubyObject self) {
-            java.lang.String str = (java.lang.String) self.toJava(java.lang.String.class);
-            return RubyString.newString(context.runtime, str).inspect();
+            return newString(context, self.toJava(java.lang.String.class)).inspect(context);
         }
 
     }
@@ -865,7 +883,7 @@ public abstract class JavaLang {
             // <#Java::JavaLang::Thread:760 [foo] bar TIMED_WAITING>
 
             RubyString buf = inspectPrefix(context, self.getMetaClass());
-            RubyStringBuilder.cat(context.runtime, buf, Long.toString(thread.getId()));
+            RubyStringBuilder.cat(context.runtime, buf, Long.toString(thread.threadId()));
             RubyStringBuilder.cat(context.runtime, buf, ' ');
             RubyStringBuilder.cat(context.runtime, buf, thread.getName());
             RubyStringBuilder.cat(context.runtime, buf, ' ');
@@ -896,7 +914,7 @@ public abstract class JavaLang {
         @Override
         public IRubyObject call(final ThreadContext context, final IRubyObject self, final RubyModule clazz, final java.lang.String name) {
             java.lang.Object val = unwrapIfJavaObject(self);
-            return context.runtime.newString(val.toString());
+            return newString(context, val.toString());
         }
 
     }
@@ -922,9 +940,9 @@ public abstract class JavaLang {
         @Override
         public IRubyObject call(ThreadContext context, IRubyObject self, RubyModule clazz, java.lang.String name, IRubyObject idx) {
             final RubyInteger val = (RubyInteger) self.callMethod(context, "[]", idx);
-            int byte_val = val.getIntValue();
+            int byte_val = val.asInt(context);
             if ( byte_val >= 0 ) return val;
-            return RubyFixnum.newFixnum(context.runtime, byte_val + 256); // byte += 256 if byte < 0
+            return asFixnum(context, byte_val + 256); // byte += 256 if byte < 0
         }
     }
 
@@ -936,9 +954,9 @@ public abstract class JavaLang {
 
         @Override
         public IRubyObject call(ThreadContext context, IRubyObject self, RubyModule clazz, java.lang.String name, IRubyObject idx, IRubyObject val) {
-            int byte_val = ((RubyInteger) val).getIntValue();
+            int byte_val = ((RubyInteger) val).asInt(context);
             if ( byte_val > 127 ) {
-                val = RubyFixnum.newFixnum(context.runtime, byte_val - 256); // value -= 256 if value > 127
+                val = asFixnum(context, byte_val - 256); // value -= 256 if value > 127
             }
             return self.callMethod(context, "[]=", new IRubyObject[] { idx, val });
         }
